# vibe72

./: AUTHORS  CMakeLists.txt  README.md
src/: auxf.cpp  auxf.hpp  calc.cpp  calc.hpp  conf.cpp  conf.hpp  const.hpp  main.cpp  prgid.hpp
